# 42-rag-against-the-machine

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/rag/: __main__.py  exceptions.py  main.py  rag_dataset.py  report.py  tui.py
src/rag/chunking/: base_parser.py  chunk_enchancement_processor.py  chunking_manager.py  chunking_processor.py  markdown_chunking_processor.py  markdown_file.py  python_file.py
src/rag/config/: app_config.py  bm25.py  bm25_config.py  chunking_config.py  embedding.py  indexing_config.py  llm.py  retrieving_config.py  rrf.py  text_processing.py
src/rag/evaluating/: evaluation_processor.py
src/rag/evaluation/: evaluation_processor.py
src/rag/indexing/: bm25_configuration.py  bm25_indexing_processor.py  bm25_repository_indexing_processor.py  files_repository_scanner.py  indexing_manager.py  indexing_pipeline.py  indexing_processor.py  indexing_processor_factory.py  langchain_chunking_processor.py  text_processing_factory.py  text_processing_manager.py  text_processors.py  vector_embedding_processor.py
src/rag/llm/: llm_chat_processor.py  llm_manager.py  prompt_generator.py
src/rag/models/: chunk.py  cli_models.py  file_category.py  file_type.py  indexing_method.py  minimal_source.py  question.py  rag_dataset.py  search_result.py
src/rag/pipeline/: indexing_stage.py  rag_pipeline.py  stage.py
src/rag/retrieving/: bm25_retrieving_processor.py  retrieving_manager.py  retrieving_pipeline.py  retrieving_processor.py  retrieving_processor_factory.py  vector_retrieving_processor.py
src/rag/text_processing/: pipeline_factory.py  text_processing_factory.py  text_processing_pipeline.py  text_processors.py  text_type.py
src/rag/utils/: cli_validator.py  files_manager.py  measure.py  patch_sentence_transformers_tqdm.py  reciprocal_rank_fusion.py
tests/chunking/: test_python.py
tests/config/: test_text_processing_config.py
tests/data/: mock_python_file.py
tests/evaluation/: test_evaluation_processor.py
tests/indexing/: test_files_repository_scanner.py  test_markdown_chunking_processor.py
tests/retrieving/: test_retrieving_manager.py
tests/utils/: test_reciprocal_rank_fusion.py
