[project]
name = "rag-against-the-machine"
version = "0.1.0"
description = "Retrieval Augmented Generation project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "bm25s[core]>=0.3.9",
    "fire>=0.7.1",
    "langchain-community>=0.3.27",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]

[tool.uv]
package = true


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
torch = { index = "pytorch" }

[project.scripts]
rag = "rag.main:main"



[tool.mypy]
strict = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# see all options: https://docs.astral.sh/ruff/rules/
select = [
    # isort
    "I",
    # pyflakes
    "F",
    # error
    "E",
    # docstrings
    #"D101", "D102", "D103"
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[dependency-groups]
dev = [
]
