[project]
name = "rag-against-the-machine"
version = "0.1.0"
description = "Retrieval Augmented Generation project"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.14.3",
    "bitsandbytes>=0.49.2",
    "bm25s[core]>=0.3.9",
    "chromadb>=1.5.9",
    "comrak>=0.0.12",
    "fire>=0.7.1",
    "langchain-community>=0.3.27",
    "markdown>=3.10.2",
    "mistune>=3.2.1",
    "more-itertools>=11.1.0",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "tqdm>=4.66.5",
    "transformers>=5.8.1",
]

[tool.uv]
package = true


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
torch = { index = "pytorch" }

[project.scripts]
rag = "rag.main:main"



[tool.mypy]
strict = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# see all options: https://docs.astral.sh/ruff/rules/
select = [
    # isort
    "I",
    # pyflakes
    "F",
    # error
    "E",
    # docstrings
    #"D101", "D102", "D103"
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
