[project]
name = "rag-against-the-machine"
version = "0.1.0"
description = "Retrieval Augmented Generation project"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "accelerate>=1.13.0",
    "bm25s[core]>=0.3.9",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "en-core-web-sm",
    "fire>=0.7.1",
    "langchain-community>=0.3.27",
    "markdown>=3.10.2",
    "more-itertools>=11.1.0",
    "pypandoc[binary]>=1.17",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
    "torch>=2.12.0",
    "tqdm>=4.66.5",
    "transformers>=5.8.1",
    "types-tqdm>=4.67.3.20260518",
]

[tool.uv]
package = true


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
torch = { index = "pytorch" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[project.scripts]
rag = "rag.main:main"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["bm25s.*", "fire.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# see all options: https://docs.astral.sh/ruff/rules/
select = [
    # isort
    "I",
    # pyflakes
    "F",
    # error
    "E",
    # docstrings
    #"D101", "D102", "D103"
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
